--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,16 @@
 </head>
 <body>
     <header class="header">
-        <a>Home</a>
-        <a>Add Message</a>
+        <a href="">
+            <button class="nav-btn">Home</button> 
+        </a>
+        <a href="/newMessage">
+            <button class="nav-btn">Add Message</button> 
+        </a>
+        <a href="/search">
+            <button class="nav-btn">Search User Message</button> 
+        </a>
+        
     </header>
     <div id="messageContainer">
         <% if(!error){%>
