--- a/views/search.ejs
+++ b/views/search.ejs
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/searchStyle.css">
     <title>Search Page</title>
 </head>
 <body>
+    <header class="header">
+        <a href="/">
+            <button class="nav-btn">Home</button> 
+        </a>
+        <a href="/newMessage">
+            <button class="nav-btn">Add Message</button> 
+        </a>
+        <a href="/search">
+            <button class="nav-btn">Search User Message</button> 
+        </a>
+        
+    </header>
     
     <div class="form-container">
         <form id="form" method="GET">
