--- a/public/styles/homeStyle.css
+++ b/public/styles/homeStyle.css
@@ -59,12 +59,21 @@ body::before {
 }
 
 .nav-btn{
-    height: 50px;
-    width:120px;
-    background-color: gray;
-    color: whitesmoke;
-    font-weight: bold;
-    box-shadow: 5px 5px 15px black;
+   padding: 10px 20px;
+    background: #4a6b8a;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-family: 'KG Broken Vessels Sketch', cursive;
+    font-size: 1.3rem;
+    cursor: pointer;
+    margin-top: 10px;
+    align-self: center;
+    width: 200px;
+    height: 65px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+    font-family: "KG Broken Vessels Sketch";
 }
 
 #messageContainer{
